--- a/FSRCompiler 2.0.csproj
+++ b/FSRCompiler 2.0.csproj
@@ -9,4 +9,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Hypixel.NET" Version="1.0.9.4" />
+  </ItemGroup>
+
 </Project>
