fixed skull text box not enabling when item type is skull

--- a/FSRCompiler 2.0.csproj
+++ b/FSRCompiler 2.0.csproj
@@ -3,14 +3,11 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
+	<PublishSingleFile>true</PublishSingleFile>
     <RootNamespace>FSRCompiler_2._0</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Hypixel.NET" Version="1.0.9.4" />
-  </ItemGroup>
 
 </Project>
